--- a/src/app/component/home/components/useful-tips/tips-list/tips-list.component.html
+++ b/src/app/component/home/components/useful-tips/tips-list/tips-list.component.html
@@ -1,8 +1,8 @@
 <div id="swiper-wrapper">
   <h2 class="section-caption">{{ "homepage.eco-advices.caption" | translate }}</h2>
 
-  <swiper class="swiper-container" [config]="config">
-    <app-tips-card *ngFor="let tip of tips" class="swiper-slide" [tip]="tip"></app-tips-card>
+  <swiper class="swiper-container" [config]="config" *ngIf="tips">
+    <app-tips-card *ngFor="let tip of tips" class="swiper-slide" [tip]="tip" ></app-tips-card>
   </swiper>
 </div>
 <div id="nav-row">
