[BUGFIX] Added extra el render

--- a/src/app/component/home/components/useful-tips/tips-card/tips-card.component.html
+++ b/src/app/component/home/components/useful-tips/tips-card/tips-card.component.html
@@ -2,5 +2,5 @@
   <div class="tip-image-wrapper">
     <img [src]="tip.imageUrl">
   </div>
-  <p>{{tip.title | translate }}</p>
+  <p>{{ tip.title }}</p>
 </div>
